--- a/project/gardener/src/main/webapp/resources/css/notice.css
+++ b/project/gardener/src/main/webapp/resources/css/notice.css
@@ -45,7 +45,7 @@ a{
 .list{
     position: relative;
     width: 100%;
-    height: 63px;
+    min-height: 63px;
     box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.16);
     margin-top: 10px;
 }
@@ -65,6 +65,14 @@ a{
     position: absolute;
     right: 6px;
     top: 6px;
+}
+.list .content{
+	/* padding-top : 60px; */
+	padding : 60px 14px 10px 14px;
+	font-size : 9px;
+}
+.hide{
+	display: none;
 }
 
 /* 리스트 열렸을때 */
