--- a/project/gardener/src/main/webapp/resources/css/init.css
+++ b/project/gardener/src/main/webapp/resources/css/init.css
@@ -3,6 +3,14 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+@font-face {
+    font-family: 'MaruBuri-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/MaruBuri-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 html, body, div, span, applet, object, iframe,
  p, blockquote, pre,
@@ -30,8 +38,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	font-family: 'Noto Sans KR', sans-serif;	
+	line-height: 1;	
 }
+
 ol, ul {
 	list-style: none;
 }
