즐겨찾기 구현중
검색결과
- 검색완료시 나오는 화면 css, 링크 주소 수정
- 검색결과가 많아서 스크롤을 하더라도 검색창은 항상 위에 고정되어있게 수정

홈화면
- 식물단계에 맞는 게이지 표시

공지사항
- 공지사항 리스트를 호출하는 메소드를 UserService에서 NoticeService로 옮김

--- a/project/gardener/src/main/webapp/resources/css/favorite.css
+++ b/project/gardener/src/main/webapp/resources/css/favorite.css
@@ -117,8 +117,10 @@ a{
 .brand .brand-name{
     position: absolute;
     display: inline-block;
-    top: 28px;
+    width: 220px;
+    top: 50%;
     left: 62px;
+    transform: translate(0,-50%);
     font-family: Roboto;
     font-size: 14px;
     font-weight: 500;
