--- a/project/gardener/src/main/webapp/resources/css/common.css
+++ b/project/gardener/src/main/webapp/resources/css/common.css
@@ -17,7 +17,7 @@ root{
 	font-weight: 600;
 }
 .selectedHeader{
-	background-color: #ddd;
+	background-color: #eee;
 	color:black;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
@@ -275,7 +275,7 @@ footer h5 {
 	max-height: 235px;
 }
 .container-custom{
-	background-color: #ddd;
+	background-color: #eee;
 }
 
 .rightSide{
