이용약관 추가
이용약관
- jsp, css 추가

회원가입
- 이용약관 경로 추가
- submit 버튼 위치 수정, css 수정

홈화면
- align 위치 css 수정

--- a/project/gardener/src/main/webapp/resources/css/membership.css
+++ b/project/gardener/src/main/webapp/resources/css/membership.css
@@ -12,7 +12,8 @@
         
         #align{
             width: 328px;
-            height: calc(100vh - 44px - 40.5px - 31.5px);
+            /* height: calc(100vh - 44px - 40.5px - 31.5px); */
+            height: calc(100vh - 44px - 31.5px - 24px);
             margin: 0 auto;
             position: relative;
         }
@@ -151,6 +152,8 @@
             height: 44px;
             background-color: #66bb6a;
             position: relative;
+            border: 0px;
+            color: white;
         }
         #submit p{
             position: absolute;
