식물 이미지 교체, 즐겨찾기 수정

--- a/project/gardener/src/main/webapp/resources/css/favorite.css
+++ b/project/gardener/src/main/webapp/resources/css/favorite.css
@@ -125,7 +125,7 @@ a{
     font-size: 14px;
     font-weight: 500;
 }
-.brand img{
+.brand .heart{
     position: absolute;
     right: 15px;
     top: 24.2px;
