--- a/project/gardener/src/main/webapp/resources/css/005-01.css
+++ b/project/gardener/src/main/webapp/resources/css/005-01.css
@@ -29,6 +29,12 @@ body {
     padding: 0; 
 }
 
+.header {
+    width: 100%;
+    height: 42px;
+    background-color: rgb(255, 255, 255, 0);
+}
+
 /* width: 360px; height: 640px; 기준 */
 #button_close {
     position: absolute;
