--- a/project/gardener/src/main/webapp/resources/css/005-01-01.css
+++ b/project/gardener/src/main/webapp/resources/css/005-01-01.css
@@ -27,6 +27,8 @@ body {
     height: 42px;
     background-color: rgb(255, 255, 255, 0.5);
     box-shadow: 0.3px 0px 5px 1px rgba(200, 200, 200, 0.1);
+    position: absolute;
+    z-index: 9999;
 }
 
 .header_text {
