--- a/project/gardener/src/main/webapp/resources/css/005-01-01.css
+++ b/project/gardener/src/main/webapp/resources/css/005-01-01.css
@@ -59,7 +59,8 @@ body {
 }
 
 .footer { 
-    position: fixed;
+    z-index: 999;
+    position: absolute;
     bottom: 0;
     width:100%;
     height: 60px;
