--- a/project/gardener/src/main/webapp/resources/css/membership.css
+++ b/project/gardener/src/main/webapp/resources/css/membership.css
@@ -45,10 +45,12 @@
         .info p{
             font-size: 10px;
             color: gray;
+            width: 10px;
+            display: inline-block;
         }
         .info .title{
             margin-bottom: 8px;
-            width: 100px;
+            width: 200px;
         }
         .info div{
             width: 328px;
@@ -77,7 +79,7 @@
         }
 
         /* info 개별 사항 */
-        #email{margin-top: 10px;}
+        #email{margin-top: 10px; margin-bottom: 10px;}
         #email input{width: 80%;}
         #email #certification{
             color: #66bb6a;
@@ -88,7 +90,7 @@
         }
 
         .info .select{
-            background-color: #fff;
+            background-color: #f5f5f5;
         }
 
         .select {
