--- a/project/gardener/src/main/webapp/resources/css/pwupdate.css
+++ b/project/gardener/src/main/webapp/resources/css/pwupdate.css
@@ -22,7 +22,7 @@
                 border-bottom: 5px solid #f5f5f5;
             }
             #header p{
-                width: 150px;
+                width: 200px;
                 text-align: center;
                 font-size: 15px;
                 color: #2c2c2c;
@@ -36,7 +36,7 @@
                 left: 9px;
             }
     
-            /* infoµé °øÅë»çÇ× */
+            /* infoï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ */
             .info{
                 width: 100%;
                 margin-bottom: 18px;
@@ -75,7 +75,7 @@
                 top: 25%;
             }
     
-            /* infoµé °³º°»çÇ× */
+            /* infoï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ */
             #email{margin-top: 31.5px;}
             #email #send{
                 color: #66bb6a;
@@ -94,7 +94,7 @@
     
 
     
-            /* ¿Ï·á¹öÆ° */
+            /* ï¿½Ï·ï¿½ï¿½Æ° */
             #submit{
                 width: 100%;
                 height: 44px;
